# ogu_schedule

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  starter.py
ScheduleOGU/: __init__.py  main.py
ScheduleOGU/config/: database.py
ScheduleOGU/core/: __init__.py  bot.py  enums.py  http.py  models.py
ScheduleOGU/core/http/: __init__.py  erorrs.py  models.py  utils.py
ScheduleOGU/handlers/: __init__.py
ScheduleOGU/handlers/schedule/: __init__.py
ScheduleOGU/handlers/user/: __init__.py
ScheduleOGU/states/: user.py
ScheduleOGU/utils/: __init__.py  logging.py
schedule_ogu/: __init__.py  misc.py  models.py
schedule_ogu/api/: __init__.py  models.py  utils.py
schedule_ogu/config/: __init__.py  bot.py  database.py
schedule_ogu/filters/: __init__.py
schedule_ogu/handlers/: __init__.py  schedule.py  start.py  user.py
schedule_ogu/keyboards/: commands.py  start.py
schedule_ogu/middlewares/: __init__.py
schedule_ogu/models/: __init__.py  db.py  enums.py
schedule_ogu/routers/: __init__.py  schedule.py  start.py
schedule_ogu/services/: schedule.py
schedule_ogu/states/: user.py
schedule_ogu/utils/: __init__.py  cli.py  db.py  enums.py  executor.py  logging.py  ratelimiter.py  render.py  superuser.py  time.py
