[tool.poetry]
name = "ogu_schedule"
version = "0.1.0"
description = ""
authors = ["CraazzzyyFoxx <andrey.pod19@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.1"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.1"
colorlog = "^6.7.0"
selenium = "^4.6.1"
fake-useragent = "^1.1.0"
PyVirtualDisplay = "^3.0"
loguru = "^0.6.0"
click = "^8.1.3"
asyncpg = "^0.27.0"
uvloop = {version = "==0.17.0", platform="linux"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
aiogram = {git = "https://github.com/aiogram/aiogram.git", rev = "dev-3.x"}

[tool.poetry.dev-dependencies]
aiohttp_autoreload = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
